chore: clean unused api
